@@ -21,6 +21,8 @@ Changes to Version 2.0-13
     o Fixed handling of labels argument in scatterplot.formula() and scatterplotMatrix.formula().
     
     o Fixed qqPlot.default() so that it honors line="none" (bug reported by Rob Kushler).
+    
+    o Added new default method for confidenceEllipse(), which now can construct confidence ellipses for linear functions of coefficients.
 
 Changes to Version 2.0-12
 
